- global edit style(apply bootstrap marking)

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,7 +51,7 @@
         <span class="icon iconBird"></span>
 
         <form class="search" action="/search" id="global-nav-search">
-          <input type="text" id="search-query" placeholder="Поиск в Твиттере"
+          <input type="text" id="search-query" placeholder="Search Tweeter"
                  name="q" autocomplete="off" spellcheck="false">
 
           <div class="search-icon" onclick="$('#global-nav-search').submit();"></div>
