--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -11,9 +11,16 @@
 }
 
 html body {
+  font-family: Helvetica, Arial, sans-serif;
+}
+
+.global_index {
   background: url("http://localhost:3000/img/background.jpg") no-repeat fixed 0 0;
   background-size: cover;
-  width: 99%;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .shadow {
@@ -34,6 +41,7 @@ html body {
 .iconText {
   padding-top: 3px;
   padding-left: 5px;
+  font-size: 13px;
 }
 
 .iconHome {
@@ -108,8 +116,8 @@ html body {
 .iconBird {
   background: url("http://localhost:3000/img/iconBird.png") no-repeat;
   background-size: contain;
-  margin-left: 10%;
-  margin-right: 10%;
+  margin-left: 15%;
+  margin-right: 20%;
   float: left;
 }
 
@@ -311,13 +319,12 @@ small {
 
 .left .list-inline li {
   margin-left: -4px;
-  padding-right: 20px;
+  padding-right: 15px;
   height: 45px;
   padding-top: 10px;
 }
 
 .left .list-inline li:hover {
-  padding-right: 20px;
   border-bottom: 4px solid #0084b4;
   height: 45px;
 }
