- add test for controllers

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -4,6 +4,7 @@
 
 html body{
 //  background: #C0DEED url("http://localhost:3000/img/bg.png") no-repeat fixed left 40px;
+  background-color: black;
   font-family: "Helvetica Neue",Helvetica,Arial, sans-serif;
   overflow-x:hidden;
 }
