- update test for controllers  - add test for model

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -23,6 +23,10 @@ html body {
   height: 100%;
 }
 
+.navbar-default {
+  background-color: #ffffff;
+}
+
 .shadow {
   border-bottom: 1px solid #e1e8ed;
   border-bottom: 1px solid rgba(0,0,0,0.05);
